--- a/Delningsekonomi/Delningsekonomi/Views/Shared/MapLayout.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Shared/MapLayout.cshtml
@@ -31,6 +31,10 @@
 
         }
 
+        .gm-style-iw {
+            max-width: 70vw;
+        }
+
         #tooltip h2 {
             font-size: 4vh;
         }
