--- a/Delningsekonomi/Delningsekonomi/Views/Home/Index.cshtml
+++ b/Delningsekonomi/Delningsekonomi/Views/Home/Index.cshtml
@@ -22,6 +22,7 @@
     var startLng = @ViewBag.Lng;
     var startRadius = @ViewBag.Radius;
 </script>
+<script src="~/Scripts/markerclusterer.js"></script>
 <script src="~/Scripts/MapApp.js"></script>
 <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDeZ0LKWiLMNWqQGI_L5lLzo8ZN9Sa8AHU&libraries=places&callback=initialize">
@@ -30,5 +31,7 @@
 {
     @Html.Partial("Bottommenu")
 }
+
+
 
 
